--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "nodemon server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "type": "module",
   "author": "",
   "license": "ISC",
@@ -21,7 +21,9 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mongoose": "^8.9.2",
+    "mongoose": "^8.9.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
