--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SECRET_KEY = "arsalSecretKey111"
 CLOUDINARY_API_SECRET = "T0b_tfSlX-k57E0gZYi17Ofn6gw"
 CLOUDINARY_API_KEY= "574444873155993"
 CLOUDINARY_CLOUD_NAME = "dhe8oxf2v"
+NODE_ENV=production
