--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-db_password = "AbNbRR0VGI4Rpx55"
-MONGODB_URI = "mongodb+srv://arsalahmed210:AbNbRR0VGI4Rpx55@cluster0.u3wl1.mongodb.net/"
+db_password = "T0uo5FMgmxhFNwtM"
+MONGODB_URI = "mongodb+srv://arsalahmed210:T0uo5FMgmxhFNwtM@cluster0.oftam.mongodb.net/"
 SECRET_KEY = "arsalSecretKey111"
 CLOUDINARY_API_SECRET = "T0b_tfSlX-k57E0gZYi17Ofn6gw"
 CLOUDINARY_API_KEY= "574444873155993"
